# cf-short-link

./: .env  .gitignore  Cargo.toml  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/scripts/: generate_completions.rs
.github/workflows/: build.yml  release.yml
frontend/: README.md  package.json
frontend/src/: App.vue  main.ts
frontend/src/apis/: index.ts
frontend/src/pages/Auth/: Auth.vue
frontend/src/router/: index.ts
frontend/src/stores/: token.ts
frontend/src/types/: index.ts
frontend/src/utils/: nav.ts  request.ts
functions/: [[OPTIONS]].ts  [url].ts
functions/api/v1/: create.ts  delete.ts  get.ts  list.ts  update.ts
functions/fff/api/v1/: get.ts  list.ts
src/: App.vue  cli.rs  create.rs  delete.rs  get.rs  list.rs  main.rs  main.ts  request.rs  response.rs  update.rs
src/apis/: index.ts
src/components/: CreateDialog.vue
src/components/fc/: CreateLinkDialog.vue  EditLinkDialog.vue  index.ts
src/hooks/: useManage.ts  useMountComponent.ts
src/pages/Home/: Home.vue
src/pages/Manage/: Manage.vue
src/router/: index.ts
src/stores/: nav.ts  token.ts
src/types/: index.ts
src/utils/: request.ts  screen.ts
