[package]
name = "scli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1.0.89" }
chrono = { features = ["std"], default-features = false, version = "0.4.38" }
clap = { version = "4.5.17", features = ["derive"] }
minus = { version = "5.6.1", features = ["static_output"] }
serde = { version = "1.0.215", features = ["serde_derive"], default-features = false }
serde_json = "1.0.133"
serde_with = { features = ["macros"], default-features = false, version = "3.11.0" }
ureq = { features = ["tls"], default-features = false, version = "2.10.1" }

[build-dependencies]
clap = { version = "4.5.17", features = ["derive"] }

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = true